--- a/package.json
+++ b/package.json
@@ -1,27 +1,56 @@
 {
-  "name": "loan-widget",
+  "name": "@JunelXD/loan-widget",
   "version": "0.0.1",
   "description": "A loan widget wirtten in React and Typescript that utilize the Goblin Sax SDK to provide instant loan on whitelisted NFTs.",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "test": "jest"
   },
   "author": "Goblin Sax - JuneL",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@types/react": "^17.0.34",
-    "react": "^17.0.2",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.27",
+    "babel-jest": "^29.4.1",
+    "babel-loader": "^8.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.1",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.5.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/JuneLXD"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@goblinsax/gs-sdk": "^1.1.13",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.7",
+    "ethers": "^5.7.2",
+    "jest-environment-jsdom": "^29.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-resize-detector": "^8.0.3"
+  }
 }
